style.css
@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap");

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  font-family: Inter, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
    Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
}

body {
  padding-top: 36px;
}

.row {
  width: 100%;
  max-width: 1200px;
  margin: 0 auto;
  margin-top: 6em;
}

.nav__menu--wrapper {
  display: flex;
  justify-content: space-between;
  margin-top: 0;
}

.nav__logo {
  display: flex;
  align-items: center;
}

#nav__logo--image {
  width: 45px;
}

.anchor-tag--no-underline {
  text-decoration: none;
}

.nav__logo--text {
  font-weight: 800;
  font-size: 1.5rem;
  padding: 0 0 4px 12px;
  color: black;
}

.nav__menu-links--wraper {
}

.nav__menu-links {
  display: flex;
  align-items: center;
}

.nav__menu-links a {
  text-decoration: none;
  margin-left: 50px;
  color: black;
  border-bottom: 2px transparent solid;
  padding-bottom: 4px;
  transition: all 300ms ease-in-out;
}

.nav__menu-links a:hover:not(.button--primary--anchor-tag) {
  color: rgb(100 21 255);
  border-bottom: 2px rgb(100 21 255) solid;
}

.nav__menu-links > li {
  list-style: none;
  font-size: 0.85rem;
  font-weight: 600;
}

.nav__menu-link--login {
  margin-left: 30px;
}

.nav__menu-link--sign-up > a {
  margin-left: calc(50px - 34px);
}

.button--primary {
  padding: 14px 34px;
  border-radius: 24px;
  border: none;
  background-color: rgb(100 21 255);
  color: white;
  font-size: 0.85rem;
  font-weight: 600;
  list-style: none;
  text-decoration: none;
}

.button--primary:hover:not(
    .button__call-to-action--second-child:hover,
    .get-started__button--get-started:hover,
    .get-started__button--contact-us:hover
  ) {
  background-color: rgb(80 17 204);
}

button:hover {
  cursor: pointer;
}

.nav__menu--hamburger-menu {
  display: none;
  cursor: pointer;
}

.nav__menu--close-menu {
  display: none;
  opacity: 0;
  transition-duration: 300ms;
  cursor: pointer;
}

.nav__menu--hmburger-menu-img,
.nav__menu--close-menu-img {
  width: 2.25rem;
}

.nav-mobile__menu-links {
  flex-direction: column;
  align-items: center;
  justify-content: center;
  margin-top: 36px;
  margin-bottom: 18px;
}

.nav-mobile__menu-links .nav__menu-link--login {
  margin: 0;
}

.nav-mobile__menu-links li {
  margin-bottom: 24px;
}

.nav-mobile__menu-links button {
  margin-top: 24px;
}

.nav-mobile__menu-links a {
  text-align: center;
  margin: auto;
  font-size: 18px;
}

.menu--open {
  overflow: hidden;
}
.menu--open .nav__menu--hamburger-menu {
  display: none;
}

.menu--open .nav__menu--close-menu {
  opacity: 1;
  display: flex;
  z-index: 3;
}

.menu--open-background {
  display: none;
}

.menu--open .nav__menu--close-menu {
}

.nav-mobile__menu-links--wrapper {
  display: flex;
}

.nav__menu--wrapper {
}

.menu--open .menu--open-background {
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  display: flex;
  justify-content: center;
  align-items: start;
  position: fixed;
  background-color: white;
  border: solid 2px lightgrey;
  border-radius: 8px;
  /* padding: 48px;wid */
  /* width: 100%; */
  /* height: calc(100% - 48px); */
  max-height: max-content;
  width: calc(100% - 48px);
  max-width: 1200px;
  margin: 24px auto;
  z-index: 2;
  transition: all 250ms ease-in;
  animation: animate--fade-left 225ms backwards;
}

@keyframes animate--fade-left {
  0% {
    transform: translateX(100%);
  }

  75% {
    transform: translateX(-5%);
  }

  100% {
    transform: translateX(0);
  }
}

.hero__container {
  display: flex;
  width: 100%;
  flex-wrap: wrap;
}

.hero__text--wrapper {
  width: 40%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.hero__img--wrapper {
  width: 60%;
}

#trusted-customers-logo--img {
  width: 100%;
  max-width: 375px;
  opacity: 0.5;
}
#hero__img {
  width: 100%;
}

h1 {
  font-size: 3rem;
  margin-bottom: 40px;
}

p {
  font-size: 1.2rem;
  line-height: 1.5em;
  max-width: 576px;
}

.heading--description {
  margin-bottom: 2em;
}

.text-highlight--primary {
  color: #6415ff;
}

.input-combination--button {
  margin-top: 32px;
  display: flex;
  position: relative;
  width: 100%;
  max-width: 425px;
  align-items: center;
}

input {
  outline-color: lightgray;
  border: 2px solid lightgrey;
  font-size: 16px;
  width: 100%;
  max-width: 425px;
  height: 60px;
  padding: 24px 175px 24px 28px;
  border-radius: 99px;
  transition: all 400ms ease-in-out;
  margin-right: auto;
}

input:hover {
  opacity: 0.85;
  border: 2px solid grey;
  outline-color: grey;
}

input:focus {
  opacity: 1;
  border: 2px solid #6415ff;
  outline-color: #6415ff;
  color: black;
}

.button--input {
  right: 0;
  top: 0;
  bottom: 0;
  display: flex;
  position: absolute;
  margin: 9px;
}

.trusted-customers--wrapper {
  margin-top: 64px;
}

.trusted-customers--heading {
  font-size: 14px;
  color: grey;
  margin-bottom: 16px;
}

.features__container,
.features__information--wrapper {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.features__container--row {
  position: relative;
}

.blob-red__features {
  position: absolute;
  width: 300px;
  right: -112px;
  opacity: 0.4;
  z-index: -1;
}

.section__heading-highlight--title {
  text-transform: uppercase;
  font-weight: 700;
  letter-spacing: 0.09em;
  margin-bottom: 24px;
}

h2 {
  font-size: 3rem;
  margin-bottom: 40px;
  font-weight: 900;
  margin-bottom: 24px;
}

.features__heading--description {
  width: 100%;
  max-width: 535px;
  text-align: center;
  padding-bottom: 8px;
}

.features__services--row {
  display: flex;
  flex-wrap: wrap;
  width: 100%;
  max-width: 1024px;
}

.features__service-item--wrapper {
  display: flex;
}

.features__information--wrapper {
  width: 100%;
}

.features__service-item--wrapper {
  width: calc((100% / 3) - 32px);
  padding: 34px 16px;
}

.features__service-item--icon {
  /* width: 25%; */
}
/* ... */

